# tomatoclock

./: README.md
tomatoclock-master/: CMakeLists.txt
tomatoclock-master/src/app/: main.cpp
tomatoclock-master/src/app/Calculator/: Calculator.cpp  Calculator.h  Calculator.ui
tomatoclock-master/src/app/Translate/: Translate.cpp  Translate.h
tomatoclock-master/src/gui/: displayclockbase.h  settingfileoperations.cpp  settingfileoperations.h  settingwidget.cpp  settingwidget.h  settingwidget.ui
tomatoclock-master/src/gui/clock_main_widget/: clockmainwidget.cpp  clockmainwidget.h
tomatoclock-master/src/gui/clock_small_window/: clocksmallwindow.cpp  clocksmallwindow.h  progresswidget.cpp  progresswidget.h  toolswidget.cpp  toolswidget.h
tomatoclock-master/src/gui/clock_subwidgets/: addlabelwidget.cpp  addlabelwidget.h  addtargetwidget.cpp  addtargetwidget.h  chartswidget.cpp  chartswidget.h  clockdisplaywidget.cpp  clockdisplaywidget.h  clockrunningwidget.cpp  clockrunningwidget.h  customslicewithvalue.h  labelsandtargetswidget.cpp  labelsandtargetswidget.h  piecharttest.hpp  targetwidget.cpp  targetwidget.h
tomatoclock-master/src/gui/lon_widget/: autodeletewidgetpointer.hpp  button.hpp  listwidget.hpp  menu.hpp  messagebox.hpp  titlebar.hpp  widget.hpp
tomatoclock-master/src/utility/: TimeStatus.hpp  clockoptions.hpp  tomatoclocktimer.cpp  tomatoclocktimer.h
tomatoclock-master/src/utility/clock_database/: DataStructure.hpp  clocksql.hpp
